@@ -1,3 +1,15 @@
+2014-03-06  Brian Burg  <bburg@apple.com>
+
+        CodeGeneratorJS.pm doesn't need to add spaces between consecutive closing template brackets
+        https://bugs.webkit.org/show_bug.cgi?id=129836
+
+        Reviewed by Andreas Kling.
+
+        * bindings/scripts/CodeGeneratorJS.pm:
+        (GenerateParametersCheck):
+        (GetNativeVectorInnerType):
+        (GetSVGPropertyTypes):
+
 2014-03-06  Jinwoo Song  <jinwoo7.song@samsung.com>
 
         Remove unused method from BatteryController
